data/derived/sp14/progs/unify/prog4681.ml.out
Characters 8-13:
  let _ = 312.4/10;;
          ^^^^^
Error: This expression has type float but an expression was expected of type
         int
